# ESP_Sentinel_Cam

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  genindex.html  index.html  mqtt_sub.py  objects.inv  sdkconfig  sdkconfig.defaults  sdkconfig.old  search.html  searchindex.js  todolist.html
.github/workflows/: docs.yml
_sources/components/: button.rst.txt  (+6 more)
components/: button.html  camera.html  error_handler.html  event.html  index.html  led.html  mytime.html  qr.html
components/sensors/: CMakeLists.txt  battery_charge.cpp  battery_charge.html  battery_manager.cpp  battery_manager.html  battery_temp.cpp  battery_temp.html  charge_current.cpp  charge_current.html  cpu_temp.cpp  cpu_temp.html  idf_component.yml  index.html  isensor.html  light_sensor.cpp  light_sensor.html  myadc.cpp  myadc.html  new_light_sensor.cpp  sensors.cpp  sensors.html
components/sensors/include/: battery_charge.h  battery_manager.h  battery_temp.h  charge_current.h  cpu_temp.h  isensor.h  light_sensor.h  myadc.h  new_light_sensor.h  sensors.h
components/sensors/test/: CMakeLists.txt  test_sensors.cpp
docs/: Doxyfile  conf_common.py  esp_idf_gondok.txt
documentation/: generating-API-documentation.html  index.html  setting-up-the-environment.html  structure.html  syntax.html
main/: CMakeLists.txt  idf_component.yml  main.c  take_picture.c
manual_tests/: battery_charge_writer.py  battery_data.csv  config_server.py  header.json  health_report.json  log_receiver.py  mqtt_sub.py  new_config_sender.py  test_dynamic_config.json
unity-app/: CMakeLists.txt  sdkconfig
(+132 files in other folders)
